# job-search

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: pyproject.toml
api/alembic/: README  env.py
api/app/: config.py  db.py  main.py  models.py  schemas.py
api/app/ingestion/: companies.yml  greenhouse.py  normalizer.py  run.py  skill_extractor.py
api/app/routers/: companies.py  heatmap.py  jobs.py  trends.py
web/: .gitignore  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/heatmap/: page.tsx
web/app/jobs/: page.tsx
web/app/trends/: page.tsx
web/components/: india-heatmap.tsx  nav.tsx
web/lib/: api.ts  cities.ts
web/public/maps/: README.md
